<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/downloader_start"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:title="@string/downloader_option_start"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/downloader_pause"
        android:icon="@drawable/ic_pause_white_24dp"
        android:title="@string/downloader_option_pause"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/downloader_stop"
        android:icon="@drawable/ic_stop_white_24dp"
        android:title="@string/downloader_option_stop"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/downloader_remove_all"
        android:icon="@drawable/ic_delete_sweep_white_24dp"
        android:title="@string/downloader_option_remove_all"
        app:showAsAction="ifRoom" />
</menu>